@@ -1477,14 +1477,40 @@ name|void
 name|tearDown
 parameter_list|()
 block|{
+if|if
+condition|(
+name|scheduler
+operator|!=
+literal|null
+condition|)
+block|{
+name|scheduler
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
 name|scheduler
 operator|=
 literal|null
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|resourceManager
+operator|!=
+literal|null
+condition|)
+block|{
+name|resourceManager
+operator|.
+name|stop
+argument_list|()
 expr_stmt|;
 name|resourceManager
 operator|=
 literal|null
 expr_stmt|;
+block|}
 name|QueueMetrics
 operator|.
 name|clearQueueMetrics
@@ -1511,13 +1537,12 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|FairScheduler
 name|scheduler
-init|=
+operator|=
 operator|new
 name|FairScheduler
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|Configuration
 name|conf
 init|=
@@ -1987,13 +2012,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|FairScheduler
-name|fs
-init|=
+name|scheduler
+operator|=
 operator|new
 name|FairScheduler
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|YarnConfiguration
 name|conf
 init|=
@@ -2045,14 +2069,14 @@ argument_list|,
 literal|2
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|init
 argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|reinitialize
 argument_list|(
@@ -2067,7 +2091,7 @@ name|assertEquals
 argument_list|(
 literal|256
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getMinimumResourceCapability
 argument_list|()
@@ -2082,7 +2106,7 @@ name|assertEquals
 argument_list|(
 literal|1
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getMinimumResourceCapability
 argument_list|()
@@ -2097,7 +2121,7 @@ name|assertEquals
 argument_list|(
 literal|512
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getIncrementResourceCapability
 argument_list|()
@@ -2112,7 +2136,7 @@ name|assertEquals
 argument_list|(
 literal|2
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getIncrementResourceCapability
 argument_list|()
@@ -2132,13 +2156,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|FairScheduler
-name|fs
-init|=
+name|scheduler
+operator|=
 operator|new
 name|FairScheduler
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|YarnConfiguration
 name|conf
 init|=
@@ -2190,14 +2213,14 @@ argument_list|,
 literal|2
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|init
 argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|reinitialize
 argument_list|(
@@ -2212,7 +2235,7 @@ name|assertEquals
 argument_list|(
 literal|0
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getMinimumResourceCapability
 argument_list|()
@@ -2227,7 +2250,7 @@ name|assertEquals
 argument_list|(
 literal|0
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getMinimumResourceCapability
 argument_list|()
@@ -2242,7 +2265,7 @@ name|assertEquals
 argument_list|(
 literal|512
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getIncrementResourceCapability
 argument_list|()
@@ -2257,7 +2280,7 @@ name|assertEquals
 argument_list|(
 literal|2
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|getIncrementResourceCapability
 argument_list|()
@@ -22773,13 +22796,12 @@ throws|throws
 name|Exception
 block|{
 comment|// set continuous scheduling enabled
-name|FairScheduler
-name|fs
-init|=
+name|scheduler
+operator|=
 operator|new
 name|FairScheduler
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|Configuration
 name|conf
 init|=
@@ -22797,7 +22819,7 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|setRMContext
 argument_list|(
@@ -22807,19 +22829,19 @@ name|getRMContext
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|init
 argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|start
 argument_list|()
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|reinitialize
 argument_list|(
@@ -22837,7 +22859,7 @@ name|assertTrue
 argument_list|(
 literal|"Continuous scheduling should be enabled."
 argument_list|,
-name|fs
+name|scheduler
 operator|.
 name|isContinuousSchedulingEnabled
 argument_list|()
@@ -22878,7 +22900,7 @@ argument_list|(
 name|node1
 argument_list|)
 decl_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|handle
 argument_list|(
@@ -22919,7 +22941,7 @@ argument_list|(
 name|node2
 argument_list|)
 decl_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|handle
 argument_list|(
@@ -22931,7 +22953,7 @@ name|Assert
 operator|.
 name|assertEquals
 argument_list|(
-name|fs
+name|scheduler
 operator|.
 name|getClusterResource
 argument_list|()
@@ -22948,7 +22970,7 @@ name|Assert
 operator|.
 name|assertEquals
 argument_list|(
-name|fs
+name|scheduler
 operator|.
 name|getClusterResource
 argument_list|()
@@ -22976,7 +22998,7 @@ name|ATTEMPT_ID
 operator|++
 argument_list|)
 decl_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|addApplication
 argument_list|(
@@ -22992,7 +23014,7 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|addApplicationAttempt
 argument_list|(
@@ -23043,7 +23065,7 @@ argument_list|(
 name|request
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|allocate
 argument_list|(
@@ -23069,7 +23091,7 @@ name|Thread
 operator|.
 name|sleep
 argument_list|(
-name|fs
+name|scheduler
 operator|.
 name|getConf
 argument_list|()
@@ -23083,7 +23105,7 @@ expr_stmt|;
 name|FSAppAttempt
 name|app
 init|=
-name|fs
+name|scheduler
 operator|.
 name|getSchedulerApp
 argument_list|(
@@ -23170,7 +23192,7 @@ argument_list|(
 name|request
 argument_list|)
 expr_stmt|;
-name|fs
+name|scheduler
 operator|.
 name|allocate
 argument_list|(
